--- a/gpt_bill_generator.ipynb
+++ b/gpt_bill_generator.ipynb
@@ -2216,7 +2216,7 @@
         "id": "-7z-Glq4vOKm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 209,
+          "height": 293,
           "referenced_widgets": [
             "b509bf273a91485f9e2eb59e44c7ab3e",
             "2587dd8ece4d4ef88591df6377286fec",
@@ -2527,12 +2527,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3476579d-812f-419e-95b8-489099649f79"
+        "outputId": "459864df-1d8d-4565-93e3-c101d99799a1"
       },
       "source": [
         "print(train_dataset[0])"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -2546,28 +2546,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vf13Cc7h8Uc"
+        "id": "6Vf13Cc7h8Uc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a9ad34df-3426-4316-97cb-d7cfef268a40"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "print(train_dataset[0].keys())"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['text', 'summary', 'title'])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "10JykWBliBVs"
+        "id": "10JykWBliBVs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4635b4a-0f7e-4bbc-fe94-7b3ff24fa528"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "print(train_dataset[1][\"summary\"])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Human Rights Information Act - Requires certain Federal agencies to identify and organize all human rights records regarding activities occurring in Guatemala and Honduras after 1944 for declassification and disclosure purposes, and to make them available to the public. \n",
+            "Instructs the President to report to Congress regarding agency compliance. \n",
+            "Prescribes guidelines under which the Interagency Security Classification Appeals Panel shall review agency determinations to postpone public disclosure of any human rights record.  Authorizes postponement of such public disclosures on specified grounds. \n",
+            "Requires any U.S. agency, upon request by an entity created by the United Nations, the Organization of American States (or similar entity), a national truth commission (or similar entity), or from the principal justice or human rights official of a country that is investigating a pattern of gross violations of internationally recognized human rights, to review, declassify, and publicly disclose any human pertinent rights records. \n",
+            "Directs the Information Security Policy Advisory Council to report to Congress on declassification of human rights records relating to other countries and to make such report available to the public. \n",
+            "Creates two additional positions in the Panel in order to implement this Act.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "dELa3IGfm9hF"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "train_path = \"train.txt\""
+      ],
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -2575,8 +2610,10 @@
       "metadata": {
         "id": "v55kvMY4m9qg"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "eval_path = \"eval.txt\""
+      ],
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -2584,8 +2621,14 @@
       "metadata": {
         "id": "l9rM4-HJnEIe"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def generate_text(path,dataset):\n",
+        "    with open(path, \"w\") as text_file:\n",
+        "      for case in dataset:\n",
+        "        text = case[\"summary\"]\n",
+        "        text_file.write(text + \"\\n\")"
+      ],
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -2593,8 +2636,10 @@
       "metadata": {
         "id": "AdIliyoHrO84"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "generate_text(train_path, train_dataset)"
+      ],
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -2602,8 +2647,10 @@
       "metadata": {
         "id": "G44R_XwArPLd"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "generate_text(eval_path, train_dataset)"
+      ],
+      "execution_count": 22,
       "outputs": []
     },
     {
